--- a/app_client/home/home.view.html
+++ b/app_client/home/home.view.html
@@ -17,8 +17,8 @@
 			<div class="col-xs-12 list-group-item" ng-repeat="location in vm.data.locations | filter : textFilter">
 				<h4>
 					<a href="/location/{{ location._id }}">{{ location.name }}</a>
-					<small class="rating-stars" rating="location.rating"></small>
-					<span class="badge pull-right badge-default">{{ location.distance }}</span>
+					<small class="rating-stars" rating-stars rating="location.rating"></small>
+					<span class="badge pull-right badge-default">{{ location.distance | formatDistance }}</span>
 				</h4>
 				<p class="address">{{ location.address }}</p>
 				<p>
